--- a/blackpink.html
+++ b/blackpink.html
@@ -14,12 +14,13 @@
 
 <body = background="blackpink_1.jpg">
 <center>
-  <h3 class="btn btn-info heading">Changing width, height and postion of a square in Realtime
+  <h3 class="btn btn-warning heading"> FONT MANIPULATOR<br>Changing font size and postion of a font in Realtime
     <br>
-    <span class="note">NOTE - You will be able to read the notice by increasing or decreasing the font size, 
-    with moving your wrist close so it will decrease and far for increasing the size. </span>
+    <span class="note">NOTE - You will be able to decrease or increase the font size by increasing or decreasing the distance
+      between left wrist and right wrist. 
+     </span>
     <br>
-      <span id="square_sides"></span>
+      <span id="font_size"></span>
   </h3>
 </center>
 <div class="copy_right_footer">Devloped by - Utsavi Sama</div>
